# era-system-contracts

./: .eslintignore  .eslintrc  .gitignore  .solhint.json  CONTRIBUTING.md  README.md  SystemConfig.json  SystemContractsHashes.json  hardhat.config.ts  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  tests.yaml
bootloader/: bootloader.yul
bootloader/test_infra/: Cargo.toml  README.md
bootloader/test_infra/src/: hook.rs  main.rs  test_count_tracer.rs  tracer.rs
bootloader/test_infra/src/test_transactions/: README.md
bootloader/tests/: function_test.yul
contracts/: AccountCodeStorage.sol  BootloaderUtilities.sol  ComplexUpgrader.sol  Compressor.sol  Constants.sol  ContractDeployer.sol  DefaultAccount.sol  EmptyContract.sol  EventWriter.sol  EventWriter.yul  ImmutableSimulator.sol  KnownCodesStorage.sol  L1Messenger.sol  L2EthToken.sol  MsgValueSimulator.sol  NonceHolder.sol  SystemContext.sol
contracts/interfaces/: IAccount.sol  IAccountCodeStorage.sol  IBootloaderUtilities.sol  IComplexUpgrader.sol  ICompressor.sol  IContractDeployer.sol  IEthToken.sol  IImmutableSimulator.sol  IKnownCodesStorage.sol  IL1Messenger.sol  IL2StandardToken.sol  IMailbox.sol  INonceHolder.sol  IPaymaster.sol  IPaymasterFlow.sol  ISystemContext.sol  ISystemContextDeprecated.sol  ISystemContract.sol
contracts/libraries/: EfficientCall.sol  RLPEncoder.sol  SystemContractHelper.sol  SystemContractsCaller.sol  TransactionHelper.sol  UnsafeBytesCalldata.sol  Utils.sol
contracts/precompiles/: EcAdd.yul  EcMul.yul  EcPairing.yul  Ecrecover.yul  Keccak256.yul  Modexp.yul  P256VERIFY.yul  SHA256.yul
contracts/test-contracts/: Callable.sol  Deployable.sol  DummyUpgrade.sol  EventWriterTest.sol  ExtraAbiCaller.zasm  KeccakTest.sol  MockContract.sol  MockERC20Approve.sol  MockKnownCodesStorage.sol  MockL1Messenger.sol  NotSystemCaller.sol  SystemCaller.sol  TestSystemContract.sol  TestSystemContractHelper.sol
scripts/: calculate-hashes.ts  compile-yul.ts  compile-zasm.ts  constants.ts  deploy-preimages.ts  preprocess-bootloader.ts  preprocess-system-contracts.ts  process.ts  quick-setup.sh  utils.ts
test/: AccountCodeStorage.spec.ts  BootloaderUtilities.spec.ts  ComplexUpgrader.spec.ts  Compressor.spec.ts  ContractDeployer.spec.ts  DefaultAccount.spec.ts  EcAdd.spec.ts  EcMul.spec.ts  EcPairing.spec.ts  EmptyContract.spec.ts  EventWriter.spec.ts  ImmutableSimulator.spec.ts  KnownCodesStorage.spec.ts  L2EthToken.spec.ts  P256VERIFY.spec.ts  system-contract-test.test.ts
test/precompiles/: EcAdd.spec.ts  EcMul.spec.ts
test/shared/: constants.ts  extraAbiCaller.ts  mocks.ts  transactions.ts  utils.ts
test/utils/: IZkSync.json
(+14 files in other folders)
