[package]
name = "test_infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vm = { git = "https://github.com/matter-labs/zksync-era.git", branch = "mmzk_1006_fix_tracer" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", branch = "mmzk_1006_fix_tracer" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", branch = "mmzk_1006_fix_tracer" }
zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", branch = "mmzk_1006_fix_tracer" }
zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", branch = "mmzk_1006_fix_tracer" }
vlog = { git = "https://github.com/matter-labs/zksync-era.git", branch = "mmzk_1006_fix_tracer" }

colored = "2.0"
hex = "0.4"
once_cell = "1.7"
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time", "json"] }
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive"] }
